# WISE_REDapp_Lib_Wrapper

./: .gitignore  CMakeLists.txt  FindJNI2.cmake  README.md
cpp/: REDappWrapper.cpp  jvm_wrapper_unix.cpp  jvm_wrapper_win.cpp
include/: REDappWrapper.h  java_types.h  jvm_wrapper.h
